--- a/mandelbulber2/formula/ui/riemann_sphere_msltoe_m3d.ui
+++ b/mandelbulber2/formula/ui/riemann_sphere_msltoe_m3d.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>844</width>
-    <height>1131</height>
+    <height>1238</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -65,10 +65,10 @@
         <number>6</number>
        </property>
        <property name="minimum">
-        <double>-180.000000000000000</double>
+        <double>-36000.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>180.000000000000000</double>
+        <double>36000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
@@ -114,10 +114,10 @@
         <number>6</number>
        </property>
        <property name="minimum">
-        <double>-180.000000000000000</double>
+        <double>-36000.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>180.000000000000000</double>
+        <double>36000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
@@ -142,10 +142,10 @@
         <number>6</number>
        </property>
        <property name="minimum">
-        <double>-180.000000000000000</double>
+        <double>-36000.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>180.000000000000000</double>
+        <double>36000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
@@ -180,7 +180,7 @@
       <number>2</number>
      </property>
      <item row="3" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetD_0">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetE_0">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -252,7 +252,7 @@
      <item row="8" column="0">
       <widget class="QLabel" name="label_148">
        <property name="text">
-        <string>r tweak:</string>
+        <string>w limit:</string>
        </property>
       </widget>
      </item>
@@ -313,34 +313,6 @@
        </property>
        <property name="maximum">
         <double>99.989999999999995</double>
-       </property>
-       <property name="singleStep">
-        <double>0.100000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0005">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="prefix">
-        <string/>
-       </property>
-       <property name="suffix">
-        <string/>
-       </property>
-       <property name="decimals">
-        <number>6</number>
-       </property>
-       <property name="minimum">
-        <double>-100000.000000000000000</double>
-       </property>
-       <property name="maximum">
-        <double>100000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
@@ -448,14 +420,42 @@
      <item row="6" column="0">
       <widget class="QLabel" name="label_143">
        <property name="text">
-        <string>sin shift:</string>
+        <string>sin s shift:</string>
        </property>
       </widget>
      </item>
      <item row="7" column="0">
       <widget class="QLabel" name="label_144">
        <property name="text">
-        <string>temppp</string>
+        <string>sin t shift:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetD_0">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="suffix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>6</number>
+       </property>
+       <property name="minimum">
+        <double>-100000.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>100000.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
        </property>
       </widget>
      </item>
